<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Welcome!"
        android:layout_gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:max="100"
        android:progress="0"
        android:progressTint="@color/purple_500"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/progressText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1/3"
        android:layout_marginBottom="16dp" />


    <TextView
        android:id="@+id/questionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="16dp"/>

    <Button android:id="@+id/option1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:contentDescription="@string/option1_desc"
            android:text="@string/option1_text" />

    <Button android:id="@+id/option2"
            style="@style/RoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/option2_desc"
            android:text="@string/option2_text"/>

    <Button android:id="@+id/option3"
            style="@style/RoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/option3_desc"
            android:text="@string/option3_text"/>

    <Button android:id="@+id/option4"
            style="@style/RoundedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/option4_desc"
            android:text="@string/option4_text"/>

    <Button
        android:id="@+id/submitBtn"
        style="@style/RoundedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:layout_gravity="center"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/submit_desc"/>
</LinearLayout>

